fix modal z-index

--- a/_auk-modal.scss
+++ b/_auk-modal.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 .auk-modal {
-  z-index: 2;
+  z-index: $au-z-index-modal;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -80,5 +80,5 @@
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   width: 100%; height: 100%;
-  z-index: 3200;
+  z-index: $au-z-index-modal-backdrop;
 }
